# llm-cli

./: README.md  cli_curses.py  cli_gradio.py  cli_simple.py  cli_simple_local.py  cli_textual.py  cli_tkinter.py  engine_gguf.py  engine_hg.py  engine_local.py  engine_ollama.py  engine_tinyllama.py  hgcli-curses.py  hgcli-tkinter.py  hgcli.py  prompts.py  pyproject.toml  repl.py  requirements.txt  test-langchain-huggingface.ipynb  test-langchain-huggingface.py  test-langchain-tools-hg-ddg.py
cli/: cli_curses.py  cli_gradio.py  cli_simple.py  cli_textual.py  gui_dash.py  gui_tkinter.py  repl.py
cli/engines/: engine_hg.py  engine_llamacpp.py  engine_ollama.py
llm_cli/: cli_curses.py  cli_simple.py  cli_textual.py  gui_dash.py  gui_gradio.py  gui_tkinter.py  prompts.py  repl.py
llm_cli/engines/: engine_hg.py  engine_instructlab.py  engine_ollama.py  engine_pipeline.py
old/: hgcli-requests.py  openaicli.py
test/: test-langchain-agents.py  test-langchain-huggingface-basic.py  test-langchain-huggingface-llmchain.py  test-langchain-tools-ddg.py  test-local-tinyllama.py  test-stable-lm.py
