[project]
name = "llm-cli"
version = "0.1.0"
description = "Various llm CLIs"
authors = [{name ="kyrlian", email= "kyrlian@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.1",
    "gradio>=4.44.1",
    "langchain>=0.3.2",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "textual>=0.82.0",
]


[project.scripts]
llmcli = "llm_cli.cli_textual:main"
llmgui = "llm_cli.gui_gradio:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
